--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 
     <properties>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
-        <json-path-assert.version>0.8.1</json-path-assert.version>
+        <lombok.version>1.16.2</lombok.version>
+        <json-path-assert.version>2.2.0</json-path-assert.version>
     </properties>
 
     <dependencies>
@@ -32,7 +33,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.20</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -44,7 +45,7 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>2.2.0</version>
+            <version>${json-path-assert.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
