--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>${swagger.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.berryman</groupId>
+            <artifactId>swagger-demo-interface</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring-boot.version}</version>
